# drive-sdk

./: .gitignore  CMakeLists.txt  SDK-Instructions  TODO.md  build.sh  clean.sh  main.c  main.cpp
CV/: centroids_h100_v3.txt  centroids_h75_v4.txt  discretize_track.py  get_camera.c  get_camera.cpp  get_camera.hpp  init_centroids.cpp  init_centroids.hpp  quickselect.c  quickselect.h
FlyExamples/: FlyImage.py
FlyExamples/FlyClient/: FlyClient.c
Images/: default_background.ppm  default_background.txt
Images/Test/: stupid.py
ML/: policies.cpp  policies.hpp  state.cpp  state.hpp
Python/: compute_median.py  get_locations.py
TrainRuns/: visualize.py
commands/: CMakeLists.txt
commands/vehicle-tool/: CMakeLists.txt  vehicle_cmd.c  vehicle_tool_simple.c
examples/simple-c-interface/: anki-simplified.c  anki-simplified.h
examples/vehicle-tool/: CMakeLists.txt  display.c  display.h  vehicle_cmd.c  vehicle_cmd_simple.c  vehicle_cmd_simple.h
